--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engine": {
+  "engines": {
     "node": "13.6.0",
     "nmp": "6.13.7"
   },
